# signal-mod

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  REPS.md  clippy.toml  rustfmt.toml
.github/workflows/: ci.yml
benches/: shutdown_bench.rs
docs/: API.md  MIGRATION.md  README.md
docs/release-notes/: v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.9.0.md  v0.9.1.md  v1.0.0.md
examples/: custom_hook_type.rs  custom_signal_set.rs  graceful_shutdown.rs  multi_subsystem.rs  priority_hooks.rs  programmatic_shutdown.rs  sync_blocking.rs
src/: coord.rs  error.rs  hook.rs  lib.rs  reason.rs  signal.rs  state.rs  token.rs
src/install/: async_std_rt.rs  ctrlc_sync.rs  mod.rs  tokio_rt.rs
tests/: coordinator_integration.rs  edge_cases.rs  property_tests.rs  stress.rs
