[package]
name = "signal-mod"
version = "1.0.0"
edition = "2021"
rust-version = "1.75"
readme = "README.md"
license = "Apache-2.0"

authors = [
    "James Gober <me@jamesgober.com>"
]

description = "Cross-platform OS signal handling and graceful-shutdown orchestration for Rust. One API for SIGTERM, SIGINT, SIGHUP, SIGQUIT, SIGPIPE, SIGUSR1, SIGUSR2 and the Windows console control events, with cloneable observer and initiator handles, priority-ordered shutdown hooks, and optional adapters for the Tokio and async-std runtimes."

# crates.io enforces 5 keywords max, each up to 20 chars, alphanumeric
# plus `-` / `_`. Optimized for search intent: signal handling,
# graceful shutdown, ctrlc replacement.
keywords = [
    "signal",
    "sigterm",
    "shutdown",
    "graceful",
    "ctrlc"
]

# crates.io enforces 5 categories max from its taxonomy.
# `os` is the umbrella; the `unix-apis` / `windows-apis` subcategories
# cover the platform back-ends; `asynchronous` covers the runtime
# adapters; `concurrency` covers the observer/initiator state machine.
categories = [
    "os",
    "os::unix-apis",
    "os::windows-apis",
    "asynchronous",
    "concurrency"
]

documentation = "https://docs.rs/signal-mod"
repository    = "https://github.com/jamesgober/signal-mod"
homepage      = "https://github.com/jamesgober/signal-mod"

[package.metadata.docs.rs]
# Build with the realistic feature set: std + tokio + ctrlc-fallback.
# The `async-std` feature is excluded because its transitive
# `rustix 0.37.x` uses internal `rustc_*` attributes that current
# docs.rs nightly rejects (same root cause as the `proc-daemon`
# v1.1.1 docs.rs patch). Users who need `async-std` continue to
# build it locally with `--features async-std`.
features = ["std", "tokio", "ctrlc-fallback"]
default-target = "x86_64-unknown-linux-gnu"
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "signal_mod"
path = "src/lib.rs"

[dependencies]
parking_lot = "0.12"

# Optional async runtimes. Exactly one is expected at a time; if
# both are enabled, `tokio` wins.
tokio = { version = "1.40", default-features = false, features = [
    "sync",
    "signal",
    "rt",
    "time",
    "macros",
], optional = true }

async-std = { version = "1.12", optional = true }
futures = { version = "0.3", optional = true }

# Synchronous Ctrl+C fallback when no async runtime is selected.
ctrlc = { version = "3.4", optional = true }

[target.'cfg(unix)'.dependencies]
signal-hook = { version = "0.3", optional = true }
signal-hook-async-std = { version = "0.2", optional = true }

[dev-dependencies]
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "time", "sync"] }
criterion = { version = "0.5", default-features = false }
proptest = "1"

[features]
default = ["std", "tokio"]

# `std` is always on in practice. It exists as a feature so a future
# `no_std` story can be carved out without a breaking change.
std = []

# Tokio runtime adapter. Installs signal listeners on the active
# Tokio runtime; enables `ShutdownToken::wait().await`.
tokio = ["dep:tokio"]

# async-std runtime adapter. Uses `signal-hook-async-std` on Unix and
# `ctrlc` as the Windows back-end (async-std lacks a native Windows
# signal stream).
async-std = [
    "dep:async-std",
    "dep:futures",
    "dep:signal-hook",
    "dep:signal-hook-async-std",
    "dep:ctrlc",
]

# Synchronous `ctrlc` fallback. Lets `Coordinator::install` register a
# handler when no async runtime feature is enabled (covers
# `Signal::Interrupt`).
ctrlc-fallback = ["dep:ctrlc"]

[[bench]]
name = "shutdown_bench"
harness = false

[profile.release]
opt-level = 3
lto = "thin"

[profile.bench]
debug = true
